# podstage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ui.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
containers/runtime/: Containerfile  README.md  entrypoint.sh  run.sh  seat-shim.c
host/: 99-podstage-virtual-inputs.rules
src/podstage/: __init__.py  cli.py  config.py
src/podstage/core/: __init__.py  desktop.py  doctor.py  elevate.py  monitor.py  provisioner.py  runtime.py  sandbox.py  session.py  steam.py  sunshine_api.py  teardown.py  udev.py
src/podstage/ui/: __init__.py  app.py  i18n.py  theme.py  widgets.py  workers.py
src/podstage/ui/pages/: logs_page.py  sandbox_page.py  session_page.py  setup_page.py
src/podstage/ui/translations/: __init__.py  de.py
tests/: conftest.py  test_config.py  test_desktop.py  test_doctor.py  test_elevate.py  test_i18n.py  test_provisioner.py  test_runtime.py  test_sandbox.py  test_session.py  test_steam.py  test_teardown.py  test_udev.py
